syntax = "proto3";

package v1.text_data;

option go_package = "gophKeeper/protobuf/V1/text_data";

message TextDataRequest {
  string text = 1;
  string id = 2;
}

message TextDataResponse {
  bool success = 1;
}

message GetTextDataRequest {
  string id = 1;
}

message GetTextDataResponse {
  string text = 1;
  string id = 2;
}

message EditTextDataRequest {
  string text = 1;
  string id = 2;
}

message DeleteTextDataRequest {
  string id = 1;
}

message GetAllTextDataRequest {}

message GetAllTextDataResponse {
  repeated GetTextDataResponse items = 1;
}

service TextDataService {
  rpc SaveTextData(TextDataRequest) returns (TextDataResponse);
  rpc GetTextData(GetTextDataRequest) returns (GetTextDataResponse);
  rpc EditTextData(EditTextDataRequest) returns (TextDataResponse);
  rpc DeleteTextData(DeleteTextDataRequest) returns (TextDataResponse);
  rpc GetAllTextData(GetAllTextDataRequest) returns (GetAllTextDataResponse);
}
